--- a/client/src/styles/_constants.scss
+++ b/client/src/styles/_constants.scss
@@ -13,3 +13,47 @@ $cream: #f7fff7;
 $purple: #845ec2;
 $gray: #d9e8ee;
 $green-blue: #34839c;
+
+// =========================================================
+// BREAKPOINT
+// =========================================================
+
+$small-size: 576px;
+$medium-size: 768px;
+$large-size: 1024px;
+$xlarge-size: 1200px;
+
+// Small devices
+@mixin sm-only {
+    @media (max-width: #{$small-size}) {
+        @content;
+    }
+}
+
+// Medium devices
+@mixin md {
+    @media (min-width: #{$medium-size}) {
+        @content;
+    }
+}
+
+// Large devices
+@mixin lg {
+    @media (min-width: #{$large-size}) {
+        @content;
+    }
+}
+
+// Large devices
+@mixin xlg {
+    @media (min-width: #{$xlarge-size}) {
+        @content;
+    }
+}
+
+// Custom devices
+@mixin rwd($screen) {
+    @media (min-width: $screen+"px") {
+        @content;
+    }
+}
