--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -1,7 +1,8 @@
 body {
     height: 100%;
     background-color: $cream;
-    // font-family: $body-font-family;
+    font-family: $main-font-face;
+    letter-spacing: $global-letter-spacing;
     // font-weight: normal;
     // margin: 0;
     // font-size: $medium-font;
